# WHiTEMax_LineServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  premake5.lua
Source/LineServer/include/: LineServer.h
Source/LineServer/src/: LineServer.cpp  main.cpp
Source/Utils/include/: Logger.h
Source/Utils/src/: Logger.cpp
